<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


        <item
            android:id="@+id/item_action_lock_change_theme"
            android:title="@string/action_lock_change_theme"
            android:orderInCategory="100"
            app:showAsAction="never" />
        <item
            android:id="@+id/item_action_lock_forgot_pattern"
            android:title="@string/action_lock_forgot_pattern"
            android:orderInCategory="100"
            app:showAsAction="never" />

        <item
            android:id="@+id/item_action_lock_invisible_pattern"
            android:title="@string/action_lock_invisible_pattern"
            android:orderInCategory="100"
            android:checkable="true"
            app:showAsAction="never" />

</menu>