<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <LinearLayout
        android:id="@+id/layout_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:weightSum="1">


        <ImageView
            android:id="@+id/user_profile_photo"
            android:layout_width="100dp"
            android:layout_height="100dp"
           android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_launcher"
            android:elevation="4dp"
            android:layout_below="@+id/login_title" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <EditText
                android:id="@+id/edtName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableTint="#FF4081"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
                android:maxLength="15"
                android:singleLine="true"
                android:hint="Full Name" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            >

            <EditText
                android:id="@+id/edtAddr"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableTint="#FF4081"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890_-"
                android:maxLength="15"
                android:singleLine="true"
                android:hint="@string/app_username"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            >

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableTint="#FF4081"
                android:inputType="textPassword"
                android:maxLength="15"
                android:singleLine="true"
                android:hint="@string/app_password"/>
        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:id="@+id/layoutPasswordStrength"
            android:visibility="gone"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Password Strength:"
                />

            <ProgressBar
                android:id="@+id/progressPassword"
                style="?android:progressBarStyleHorizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:max="3"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
            />
        </RelativeLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            >

            <EditText
                android:id="@+id/edtConfirm"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableTint="#FF4081"
                android:inputType="textPassword"
                android:maxLength="15"
                android:singleLine="true"
                android:hint="@string/reg_conf_pass"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            >

            <EditText
                android:id="@+id/edtUniqueCode"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableTint="#FF4081"
                android:inputType="numberDecimal"
                android:maxLength="4"
                android:singleLine="true"
                android:hint="@string/reg_uniq_code"
                />
        </android.support.design.widget.TextInputLayout>

            <Spinner
                android:id="@+id/spinnerSecQuestion1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_alignParentEnd="true" />
 <!--           <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow"
                android:layout_alignTop="@+id/spinnerSecQuestion1"
                android:layout_alignEnd="@+id/spinnerSecQuestion1" />-->

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            >

            <EditText
                android:id="@+id/edtSecAnswer1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableTint="#FF4081"
                android:singleLine="true"
                android:maxLength="15"
                android:hint="@string/reg_seca"
                />
        </android.support.design.widget.TextInputLayout>

            <Spinner
                android:id="@+id/spinnerSecQuestion2"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="20dp"
                android:textSize="16sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_alignParentEnd="true"
                android:visibility="gone"
                />
           <!-- <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow"
                android:layout_alignTop="@+id/spinnerSecQuestion2"
                android:layout_alignEnd="@+id/spinnerSecQuestion2" />-->

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textInputLayoutSecurityAnswer2"
            android:visibility="gone"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            >

            <EditText
                android:id="@+id/edtSecAnswer2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableTint="#FF4081"
                android:singleLine="true"
                android:maxLength="15"
                android:hint="@string/reg_seca"
                />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="328dp"
            android:layout_height="80dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:layout_below="@+id/edtSec2a"
            android:layout_marginTop="50dp"
            android:text="REGISTER"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textSize="40sp"
            android:textColor="@color/textColorPrimary"
            android:background="@drawable/brown_rect"
            android:gravity="center"
            android:layout_weight="0.53" />
    </LinearLayout>
    </LinearLayout>
</ScrollView>
